# mcp-server-zefix

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy.yml  publish.yml  test.yml
src/mcp_server_zefix/: __init__.py  __main__.py  i18n.py  models.py  server.py  zefix_client.py
tests/: conftest.py  test_models.py  test_server.py
