[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-zefix"
version = "0.2.0"
description = "MCP server for querying the Swiss Zefix company register (Handelsregister)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Philipp John", email = "philipp.john98@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "zefix",
    "switzerland",
    "company-register",
    "handelsregister",
    "swiss-companies",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[project.scripts]
mcp-server-zefix = "mcp_server_zefix:main"

[project.urls]
Homepage = "https://github.com/johnphilipp/mcp-server-zefix"
Repository = "https://github.com/johnphilipp/mcp-server-zefix"
"Bug Tracker" = "https://github.com/johnphilipp/mcp-server-zefix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_zefix"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
